--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,9 +8,15 @@
 <body>
     <header>
         <div class="logo_block header_block">
-            <h1>GOODLOOD SPOTS</h1>
+            <div><img src="https://goodlood.com/app/images/icons/logo_light_bg.svg" alt="logo"></div>
         </div>
-        <div class="reset_btn_block header_block"><a href="/reset-spots"><button class="reset_btn">RESET</button></a></div>
+        <div class="reset_btn_block header_block">
+            <a href="/reset-spots">
+            <div>
+                <button class="reset_btn">reset</button>
+            </div>
+            </a>
+        </div>
         
     </header>
     {% block content %} {% endblock %}
