--- a/website/templates/loodspots.html
+++ b/website/templates/loodspots.html
@@ -2,15 +2,19 @@
 
 {% block content %}
 <div class = loodspots_block>
-    <h1>all loodspots</h1>
-    <div class="all_loodspots">
+    <div class = loodspots_block_content>
+        <h1>all loodspots</h1>
+        <div class="all_loodspots">
+        </div>
     </div>
 </div>
 <div class = loodspots_block>
-    <h1>your loodspots</h1>
-    <div class="not_all_loodspots">
-    </div>
-    <div class="deleted_loodspots">
+    <div class = loodspots_block_content>
+        <h1>your loodspots</h1>
+        <div class="not_all_loodspots">
+        </div>
+        <div class="deleted_loodspots">
+        </div>
     </div>
 </div>
 {% endblock %}
