--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,5 +21,6 @@
     </header>
     {% block content %} {% endblock %}
     <script src="static/script.js"></script>
+    <script src="static/templates.js"></script>
 </body>
 </html>
