--- a/website/static/style.css
+++ b/website/static/style.css
@@ -133,7 +133,7 @@ header{
 
 .btn_block{
     width: 100%;
-    height: 4rem;
+    height: calc(var(--loodspot-block-height) / 3 );
     box-sizing: border-box;
     display: flex;
     align-items: center;
