--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,6 +1,6 @@
 :root {
-    --loodspot-block-height: 14rem;
-    --loodspot-block-width: 70%;
+    --spot-block-height: 14rem;
+    --spot-block-width: 70%;
 }
 
 body{
@@ -17,13 +17,11 @@ header{
     border-bottom: 1px solid black;
     margin: 0;
     box-sizing: border-box;
-    background: url("https://goodlood.com/app/images/background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: cadetblue;
     color: white;
 }
 
-.loodspots_block h1{
+.spots_block h1{
     width: fit-content;
     margin: 0;
     margin-bottom: 3rem;
@@ -42,7 +40,7 @@ header{
 
 
 .logo_block{
-    font-size: 25pt;
+    font-size: 30pt;
     font-weight: lighter;
     padding-left: 10%;   
 }
@@ -69,7 +67,7 @@ header{
     border: 3px solid white;
 }
 
-.loodspots_block{
+.spots_block{
     width: 50%;
     box-sizing: border-box;
     float: left;
@@ -79,14 +77,14 @@ header{
     justify-content: center;
 }
 
-.loodspots_block_content{
-    width: var(--loodspot-block-width);
+.spots_block_content{
+    width: var(--spot-block-width);
 }
 
-.loodspot{
+.spot{
     width: 100%;
     border-radius: 5px;
-    height: var(--loodspot-block-height);
+    height: var(--spot-block-height);
     box-sizing: border-box;
     box-shadow: 0px 0px 20px 10px rgba(198, 198, 198, 1);
     font-weight: lighter;
@@ -109,31 +107,29 @@ header{
     background-color: #561d2540;
 }
 
-.loodspot_block_top{
+.spot_block_top{
     width: 100%;
-    height: calc(var(--loodspot-block-height) * 2 / 3 - 1rem);
+    height: calc(var(--spot-block-height) * 2 / 3 - 1rem);
     box-sizing: border-box;
 }
 
-.loodspot_block_bottom{
+.spot_block_bottom{
     width: 100%;
-    height: calc(var(--loodspot-block-height) / 3 );
-    background: url("https://goodlood.com/app/images/background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
+    height: calc(var(--spot-block-height) / 3 );
+    background-color: #5f9ea0;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     box-sizing: border-box;
     transition: 0.3s ease-out;
 }
 
-.user_loodspot .loodspot_block_top{
+.user_spot .spot_block_top{
     padding-left: 5%;
 }
 
 .btn_block{
     width: 100%;
-    height: calc(var(--loodspot-block-height) / 3 );
+    height: calc(var(--spot-block-height) / 3 );
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -141,20 +137,20 @@ header{
     cursor: pointer;
 }
 
-.loodspot_action_btn{
+.spot_action_btn{
     box-sizing: border-box;
     color: white;
     text-shadow: 1px 1px 4px rgb(105, 105, 105);
     font-size: 22pt;
 }
 
-.loodspot_change_transition{
+.spot_change_transition{
     transform: scale(0.95);
     opacity: 0;
     transition: 0.3s all ease-out;
 }
 
-.user_loodspot .loodspot_block_bottom:hover{
+.user_spot .spot_block_bottom:hover{
     transform: scale(1.02);
     background-position: 0; 
     border-radius: 10px;
@@ -167,7 +163,7 @@ header{
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     box-sizing: border-box;
-    background-color: #f39994;
+    background-color: #5f9ea0;
 }
 
 .color_bar_contrast{
@@ -175,7 +171,7 @@ header{
     height: 1rem;
     border-top-left-radius: 5px;
     box-sizing: border-box;
-    background-color: #561d25;
+    background-color: #294546;
 }
 
 .city_block{
@@ -194,12 +190,11 @@ header{
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
-    padding-top: calc(2.5rem - 18pt / 2);
+    padding-top: calc(2.5rem - 20pt / 2);
     color: white;
     font-size: 20pt;
     text-align: center;
-
-    background-color: #f39994;
+    background-color: #294546;
     text-shadow: 1px 1px 4px rgb(105, 105, 105);
 }
 
@@ -226,7 +221,7 @@ header{
 .address_block, .distance_block{
     box-sizing: border-box;
     width: 70%;
-    height: calc(var(--loodspot-block-height) / 3 );
+    height: calc(var(--spot-block-height) / 3 );
     float: left;
     display: flex;
     align-items: center;
